syntax = "proto3";
package ethermint.types.v1;

import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/cosmos/gaia/types";

message InnerCosmosMsgs {
  option (gogoproto.goproto_getters) = false;

  repeated google.protobuf.Any msgs = 1;
}
